Refactor filtering to improve performance (#10167)